%% Bookty E-Commerce System - Entity Relationship Diagram
%% Mermaid ER Diagram

erDiagram
    users ||--o{ orders : "places"
    users ||--o| carts : "has"
    users ||--o{ reviews : "writes"
    users ||--o{ wishlists : "has"
    users ||--o{ coupon_usages : "uses"
    users ||--o{ user_book_interactions : "tracks"
    users ||--o{ review_helpfuls : "marks"
    users ||--o{ review_reports : "reports"

    genres ||--o{ books : "categorises"
    books ||--o{ book_trope : "has"
    tropes ||--o{ book_trope : "has"

    orders ||--o{ order_items : "contains"
    orders }o--o| coupons : "applies"
    orders }o--o| postage_rate_history : "uses"
    order_items }o--|| books : "references"
    order_items ||--o{ reviews : "reviewed in"

    carts ||--o{ cart_items : "contains"
    cart_items }o--|| books : "references"

    coupons ||--o{ coupon_usages : "tracked by"
    coupon_usages }o--|| orders : "applied to"

    flash_sales ||--o{ flash_sale_items : "includes"
    flash_sale_items }o--|| books : "references"

    book_discounts }o--|| books : "applies to"

    reviews }o--|| books : "for"
    reviews }o--|| order_items : "on"
    reviews ||--o{ review_helpfuls : "has"
    reviews ||--o{ review_reports : "has"
    review_reports }o--o| users : "reviewed by admin"

    wishlists }o--|| users : "belongs to"
    wishlists }o--|| books : "contains"

    user_book_interactions }o--|| users : "by"
    user_book_interactions }o--|| books : "for"

    postage_rates ||--o{ postage_rate_history : "history"
    postage_rate_history }o--o| users : "updated by"

    users {
        bigint id PK
        varchar name
        varchar email UK
        varchar password
        timestamp created_at
        timestamp updated_at
    }

    genres {
        bigint id PK
        varchar name
        varchar slug UK
        text description
    }

    tropes {
        bigint id PK
        varchar name
        varchar slug UK
        text description
    }

    books {
        bigint id PK
        bigint genre_id FK
        varchar title
        varchar slug UK
        varchar author
        decimal price
        integer stock
        varchar cover_image
    }

    book_trope {
        bigint id PK
        bigint book_id FK
        bigint trope_id FK
    }

    orders {
        bigint id PK
        bigint user_id FK
        bigint coupon_id FK
        bigint postage_rate_history_id FK
        decimal total_amount
        varchar status
        varchar payment_status
        varchar shipping_address
    }

    order_items {
        bigint id PK
        bigint order_id FK
        bigint book_id FK
        integer quantity
        decimal price
    }

    carts {
        bigint id PK
        bigint user_id FK
    }

    cart_items {
        bigint id PK
        bigint cart_id FK
        bigint book_id FK
        integer quantity
    }

    coupons {
        bigint id PK
        varchar code UK
        varchar discount_type
        decimal discount_value
        timestamp starts_at
        timestamp expires_at
        boolean is_active
    }

    coupon_usages {
        bigint id PK
        bigint coupon_id FK
        bigint user_id FK
        bigint order_id FK
        decimal discount_amount
    }

    flash_sales {
        bigint id PK
        varchar name
        timestamp starts_at
        timestamp ends_at
        varchar discount_type
        decimal discount_value
    }

    flash_sale_items {
        bigint id PK
        bigint flash_sale_id FK
        bigint book_id FK
        decimal special_price
    }

    book_discounts {
        bigint id PK
        bigint book_id FK
        decimal discount_amount
        decimal discount_percent
        boolean is_active
    }

    reviews {
        bigint id PK
        bigint user_id FK
        bigint book_id FK
        bigint order_item_id FK
        integer rating
        text comment
    }

    review_helpfuls {
        bigint id PK
        bigint review_id FK
        bigint user_id FK
    }

    review_reports {
        bigint id PK
        bigint review_id FK
        bigint user_id FK
        bigint admin_id FK
        varchar status
    }

    wishlists {
        bigint id PK
        bigint user_id FK
        bigint book_id FK
    }

    user_book_interactions {
        bigint id PK
        bigint user_id FK
        bigint book_id FK
        varchar action
        decimal weight
        integer count
    }

    postage_rates {
        bigint id PK
        varchar region
        decimal customer_price
        decimal actual_cost
    }

    postage_rate_history {
        bigint id PK
        bigint postage_rate_id FK
        bigint updated_by FK
        decimal customer_price
        decimal actual_cost
        timestamp valid_from
        timestamp valid_until
    }

    settings {
        bigint id PK
        varchar key UK
        text value
        varchar group
    }
